--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,25 @@
 body {
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  width: 8px;
+  background-color: #dadce0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #bdc1c6;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #9aa0a6;
+}
+
+::-webkit-scrollbar-track {
+  width: 24px;
+}
